# geomagic

geomagic/: CMakeLists.txt  package.xml
geomagic_description/: README.md  package.xml
geomagic_description/urdf/: omni.urdf
geomagic_touch/: CMakeLists.txt  README.md  package.xml
geomagic_touch/launch/: omni.launch  omni_headless.launch  two_omnis.launch
geomagic_touch/msg/: ButtonEvent.msg  EndEffectorRelative.msg  ForceCommand.msg  TouchState.msg
geomagic_touch/src/: geotouch_node.cpp  omni.cpp
geomagic_touch/srv/: SetForceOutput.srv
