<?xml version="1.0"?>
<package format="2">
    <name>geomagic_touch</name>
    <version>1.1.0</version>
    <description>ROS Node for Geomagic Touch devices.</description>
    <maintainer email="git@danepowell.com">Dane Powell</maintainer>
    <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
    <author>Hai Nguyen, Marc Killpack, Chi-Hung King, Advisor: Prof. Charlie Kemp, Lab: Healthcare Robotics Lab at Georgia Tech</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

    <build_export_depend>message_runtime</build_export_depend>
</package>


